[package]
name = "silentpayment-lib3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.26.0", features = [ "rand-std", "bitcoin_hashes", "std" ] }
bitcoin = { version = "0.29.2", features = ["serde", "base64", "rand"] }